--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 # Server Configuration
 NODE_ENV=development
 PORT=3000
-API_KEY=your-api-key-here
+API_KEY=dev-api-key-2024
+
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=yunexpress_integration
+DB_USER=root
+DB_PASSWORD=your_password
 
 # YunExpress Configuration
 YUNEXPRESS_BASE_URL=https://openapi-sbx.yunexpress.cn
@@ -16,8 +23,13 @@ ECOUNT_PASSWORD=devdev12@@
 ECOUNT_BASE_URL=https://login.ecount.com
 
 # Puppeteer Configuration
-PUPPETEER_HEADLESS=true
+PUPPETEER_HEADLESS=false
 PUPPETEER_TIMEOUT=40000
 
+# Cron Configuration
+CRON_TRACKING_ENABLED=true
+CRON_TRACKING_SCHEDULE=*/30 * * * *
+CRON_UPDATE_ERP_ENABLED=true
+
 # Logging
-LOG_LEVEL=info
+LOG_LEVEL=debug
