--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "migrate": "node src/database/migrate.js",
+    "migrate:fresh": "node src/database/migrate.js --fresh",
+    "cron": "node src/jobs/tracking.cron.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["shipping", "yunexpress", "ecount", "automation"],
@@ -20,7 +23,9 @@
     "joi": "^17.11.0",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "express-rate-limit": "^7.1.5",
+    "mysql2": "^3.6.5",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
