--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ DB_NAME=yunexpress_integration
 DB_USER=root
 DB_PASSWORD=your_password
 
+TZ=Asia/Ho_Chi_Minh
+
 # YunExpress Configuration
 YUNEXPRESS_BASE_URL=https://openapi-sbx.yunexpress.cn
 YUNEXPRESS_APP_ID=your-app-id
