--- a/.env.production
+++ b/.env.production
@@ -33,5 +33,11 @@ CRON_TRACKING_ENABLED=true
 CRON_TRACKING_SCHEDULE=*/30 * * * *
 CRON_UPDATE_ERP_ENABLED=true
 
+TELEGRAM_ENABLED=true
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_CHAT_ID=your_telegram_chat_id_here
+TELEGRAM_ON_ERROR=true
+TELEGRAM_INCLUDE_STACK=false
+
 # Logging
 LOG_LEVEL=info
