--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,35 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: yunexpress-app
     restart: unless-stopped
     ports:
       - "3000:3000"
-    environment:
-      - NODE_ENV=production
-      - TZ=Asia/Ho_Chi_Minh
-    env_file:
-      - .env
+    env_file: .env
     volumes:
       - ./logs:/app/logs
-      - /dev/shm:/dev/shm  # Shared memory for Chrome
     depends_on:
       - mysql
     networks:
       - app-network
-    # Chrome needs more shared memory
+    command: ["node", "server.js"]
+
+  worker:
+    build: .
+    container_name: yunexpress-worker
+    restart: unless-stopped
+    env_file: .env
+    volumes:
+      - ./logs:/app/logs
+      - /dev/shm:/dev/shm
+    depends_on:
+      - mysql
+    networks:
+      - app-network
     shm_size: '2gb'
-    # Security options for Chrome
     security_opt:
       - seccomp:unconfined
-    deploy:
-      resources:
-        limits:
-          cpus: '2'
-          memory: 4G
-        reservations:
-          memory: 2G
+    command: ["node", "worker.js"]
 
   mysql:
     image: mysql:8.0
@@ -43,17 +42,13 @@ services:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
-      TZ: Asia/Ho_Chi_Minh
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - app-network
-    command: --default-authentication-plugin=mysql_native_password
 
 networks:
   app-network:
-    driver: bridge
 
 volumes:
   mysql-data:
