--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@
 NODE_ENV=production
 PORT=3000
 API_KEY=your-secure-api-key
+BASE_URL=
 
 # Database Configuration (Docker internal network)
 DB_HOST=mysql
