--- a/.env.production
+++ b/.env.production
@@ -1,28 +1,33 @@
 # Server Configuration
 NODE_ENV=production
 PORT=3000
-API_KEY=your-secure-api-key
+API_KEY=
 BASE_URL=
 
 # Database Configuration (Docker internal network)
-DB_HOST=mysql
-DB_PORT=3306
-DB_NAME=yunexpress_integration
-DB_USER=appuser
-DB_PASSWORD=your_strong_password_here
+DB_HOST=172.17.0.1 
+DB_PORT=3310
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
 
 TZ=Asia/Ho_Chi_Minh
 
 # YunExpress Configuration
 YUNEXPRESS_BASE_URL=https://openapi.yunexpress.cn
-YUNEXPRESS_APP_ID=your-production-app-id
-YUNEXPRESS_APP_SECRET=your-production-app-secret
-YUNEXPRESS_SOURCE_KEY=your-production-source-key
+YUNEXPRESS_APP_ID=
+YUNEXPRESS_APP_SECRET=
+YUNEXPRESS_SOURCE_KEY=
+
+YUNEXPRESS_CN_BASE_URL=https://openapi-sbx.yunexpress.cn
+YUNEXPRESS_CN_APP_ID=
+YUNEXPRESS_CN_APP_SECRET=
+YUNEXPRESS_CN_SOURCE_KEY=
 
 # ECount Configuration
-ECOUNT_COMPANY_CODE=your_company_code
-ECOUNT_ID=your_id
-ECOUNT_PASSWORD=your_password
+ECOUNT_COMPANY_CODE=
+ECOUNT_ID=
+ECOUNT_PASSWORD=
 ECOUNT_BASE_URL=https://login.ecount.com
 
 # Puppeteer Configuration (Production - headless)
@@ -34,10 +39,10 @@ CRON_TRACKING_ENABLED=true
 CRON_TRACKING_SCHEDULE=*/30 * * * *
 CRON_UPDATE_ERP_ENABLED=true
 
-TELEGRAM_ENABLED=true
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-TELEGRAM_CHAT_ID=your_telegram_chat_id_here
-TELEGRAM_ON_ERROR=true
+TELEGRAM_ENABLED=false
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+TELEGRAM_ON_ERROR=false
 TELEGRAM_INCLUDE_STACK=false
 
 # Logging
