--- a/.env.production
+++ b/.env.production
@@ -30,6 +30,8 @@ ECOUNT_ID=
 ECOUNT_PASSWORD=
 ECOUNT_BASE_URL=https://login.ecount.com
 
+SHORT_LINK_LABEL=true
+
 # Puppeteer Configuration (Production - headless)
 PUPPETEER_HEADLESS=true
 PUPPETEER_TIMEOUT=60000
