--- a/.env.production
+++ b/.env.production
@@ -13,6 +13,8 @@ DB_PASSWORD=
 
 TZ=Asia/Ho_Chi_Minh
 
+EXTENSION_API_KEY=
+
 # YunExpress Configuration
 YUNEXPRESS_BASE_URL=https://openapi.yunexpress.cn
 YUNEXPRESS_APP_ID=
