--- a/.env.production
+++ b/.env.production
@@ -13,7 +13,8 @@ DB_PASSWORD=
 
 TZ=Asia/Ho_Chi_Minh
 
-EXTENSION_API_KEY=
+EXTENSION_USER=
+EXTENSION_PASSWORD=
 
 # YunExpress Configuration
 YUNEXPRESS_BASE_URL=https://openapi.yunexpress.cn
