--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
     "migrate:fresh": "node src/database/migrate.js --fresh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["shipping", "yunexpress", "ecount", "automation"],
+  "keywords": [
+    "shipping",
+    "yunexpress",
+    "ecount",
+    "automation"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
     "axios": "^1.6.0",
-    "puppeteer": "^21.5.2",
-    "winston": "^3.11.0",
-    "joi": "^17.11.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
     "mysql2": "^3.6.5",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "puppeteer": "^21.5.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
