--- a/.env.example
+++ b/.env.example
@@ -19,10 +19,10 @@ YUNEXPRESS_APP_SECRET=your-app-secret
 YUNEXPRESS_SOURCE_KEY=your-source-key
 
 # ECount Configuration
-ECOUNT_COMPANY_CODE=917516
-ECOUNT_ID=DEV
-ECOUNT_PASSWORD=devdev12@@
-ECOUNT_BASE_URL=https://login.ecount.com
+ECOUNT_COMPANY_CODE=
+ECOUNT_ID=
+ECOUNT_PASSWORD=
+ECOUNT_BASE_URL=
 
 # Puppeteer Configuration
 PUPPETEER_HEADLESS=false
