--- a/.env.production
+++ b/.env.production
@@ -47,6 +47,7 @@ CRON_UPDATE_ERP_ENABLED=true
 TELEGRAM_ENABLED=false
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+TELEGRAM_CHAT_ID_ERROR=
 TELEGRAM_ON_ERROR=false
 TELEGRAM_INCLUDE_STACK=false
 
