--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:worker": "nodemon worker.js",
     "migrate": "node src/database/migrate.js",
     "migrate:fresh": "node src/database/migrate.js --fresh",
+    "cron": "node src/cli/run-cron.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
