--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "joi": "^17.11.0",
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3",
+    "playwright": "^1.56.1",
     "puppeteer": "^21.5.2",
     "winston": "^3.11.0"
   },
