--- a/.env.production
+++ b/.env.production
@@ -39,6 +39,11 @@ SHORT_LINK_LABEL=true
 PUPPETEER_HEADLESS=true
 PUPPETEER_TIMEOUT=60000
 
+# Playwright Configuration
+PLAYWRIGHT_HEADLESS=true
+PLAYWRIGHT_TIMEOUT=60000
+PLAYWRIGHT_CONCURRENT_BROWSERS=2
+
 # Cron Configuration
 CRON_TRACKING_ENABLED=true
 CRON_TRACKING_SCHEDULE=*/30 * * * *
