--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3",
     "playwright": "^1.48.0",
     "puppeteer": "^21.5.2",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
