--- a/.env.production
+++ b/.env.production
@@ -13,6 +13,8 @@ DB_PASSWORD=
 
 TZ=Asia/Ho_Chi_Minh
 
+ECOUNT_HASH_LINK="#menuType=MENUTREE_000004&menuSeq=MENUTREE_000004&groupSeq=MENUTREE_000030&prgId=C000004&depth=1"
+
 EXTENSION_USER=
 EXTENSION_PASSWORD=
 
