--- a/.env.production
+++ b/.env.production
@@ -35,6 +35,10 @@ ECOUNT_ID=
 ECOUNT_PASSWORD=
 ECOUNT_BASE_URL=https://login.ecount.com
 
+ECOUNT_OAPI_BASE_URL=https://oapi.ecount.com
+ECOUNT_ZONE=
+ECOUNT_API_CERT_KEY=
+
 SHORT_LINK_LABEL=true
 
 # Puppeteer Configuration (Production - headless)
@@ -60,3 +64,27 @@ TELEGRAM_INCLUDE_STACK=false
 
 # Logging
 LOG_LEVEL=info
+
+SHORT_LINK_LABEL=true
+
+# JWT Secret for API tokens (CHANGE IN PRODUCTION!)
+API_JWT_SECRET=
+
+# API Rate Limiting
+API_DEFAULT_RATE_LIMIT_HOURLY=6000
+API_DEFAULT_RATE_LIMIT_DAILY=10000
+API_MAX_CONSECUTIVE_ERRORS=30
+
+# API Request Signature (Optional)
+API_REQUIRE_SIGNATURE=false
+
+# API Features
+API_WEBHOOK_ENABLED=true
+API_BULK_ORDER_ENABLED=true
+API_MAX_BULK_ORDERS=100
+
+# CORS for API
+API_CORS_ORIGIN=*
+
+# API Documentation URL (will be implemented later)
+API_DOCS_URL=https://docs.api.thg.com
