--- a/.env.production
+++ b/.env.production
@@ -88,3 +88,6 @@ API_CORS_ORIGIN=*
 
 # API Documentation URL (will be implemented later)
 API_DOCS_URL=https://docs.api.thg.com
+
+API_PRODUCT_CODE=THG
+API_PRODUCT_NAME=THG
