--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,12 @@ CRON_UPDATE_ERP_ENABLED=true
 
 # Logging
 LOG_LEVEL=debug
+
+# Authentication & Session
+# Secret key for signing session cookies (CHANGE IN PRODUCTION!)
+APP_SESSION_SECRET=thg-session-secret-change-in-prod
+
+# Admin User Setup
+# After setting up the app, create admin user with:
+# node scripts/create-admin.js <username> <password> [full_name] [email]
+# Example: node scripts/create-admin.js admin admin123 "Admin User" admin@example.com
